# comsci-adv

aqua/: Cargo.toml  LICENSE-MIT  README.md  index.html
aqua/server/: Cargo.toml  log.txt
aqua/server/src/: errors.rs  main.rs  utils.rs
aqua/src/: app.rs
aqua/styles/: index.scss
aqua/website/: Cargo.toml  LICENSE-MIT  README.md  index.html
array_of_objects/: Cargo.toml
array_of_objects/src/: main.rs
backpack_assignment/: Cargo.toml
backpack_assignment/src/: main.rs
binary_search_assignment/: Cargo.toml
binary_search_assignment/src/: main.rs
bubble_sort_assignment/: Cargo.toml
bubble_sort_assignment/src/: main.rs
character_class_assignment/: Cargo.toml
character_class_assignment/src/: main.rs
create_arrays_practice/: Cargo.toml
create_arrays_practice/src/: main.rs
data_management_assignment/: Cargo.toml  db.txt  songs.txt  top600songs.txt
data_management_assignment/src/: main.rs  music.rs  user.rs  utils.rs
functions_assignment/: Cargo.toml
functions_assignment/src/: list.rs  main.rs
insertion_sort_assignment/: Cargo.toml
insertion_sort_assignment/src/: main.rs
linear_search_assignment/: Cargo.toml
linear_search_assignment/src/: main.rs
my_contacts_assignment/: Cargo.toml  contactList.txt
my_contacts_assignment/src/: contact.rs  main.rs  menu.rs  utils.rs
nickname_generator_assignment/: Cargo.toml
nixode/: Cargo.toml  index.html
selection_sort_assignment/: Cargo.toml
sort_analyzer_assignment/: Cargo.toml
spell_check_assignment/: Cargo.toml
student_grade_assignment/: Cargo.toml
traverse_arr_prac/: Cargo.toml
(+56 files in other folders)
