[package]
name = "data_management_assignment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0"
rpassword = "7.1.0"
argon2 = "0.4"
rand_core = { version = "0.6", features = ["std"] }
tabled = "0.10.0"
