[package]
name = "data_management_assignment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0"
rpassword = "7.1.0"
rust-argon2 = "1.0"
rand = "0.8.5"
tabled = "0.10.0"
uuid = "1.2.2"
indoc = "1.0"

