[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.152"
serde_json = "1.0"
indoc = "1.0"
chrono = "0.4.23"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rust-argon2 = "1.0"
rand = "0.8.5"
